--- a/SquibbBot13K/SquibbBot13K.csproj
+++ b/SquibbBot13K/SquibbBot13K.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <!--<TargetFramework>netcoreapp3.1</TargetFramework>-->
     <UserSecretsId>0522ca63-cbdc-4658-922d-14d332b29535</UserSecretsId>
   </PropertyGroup>
 
