Connection via DSharpPlus working

--- a/SquibbBot13K/appsettings.json
+++ b/SquibbBot13K/appsettings.json
@@ -1,4 +1,16 @@
 {
+	"Serilog": {
+		"MinimalLevel": {
+			"Default": "Information",
+			"Override": {
+				"Microsoft": "Information",
+				"System": "Warning"
+			}
+		}
+	},
+	"ConnectionStrings": {
+		"DefaultConnection": "DataSource=app.db;Cache=Shared"
+	},
 	"Token": "<Discord API Token>",
 	"Prefix": "~",
 	"SquibbBot13KSecrets": {
