--- a/SquibbBot13K/SquibbBot13K.csproj
+++ b/SquibbBot13K/SquibbBot13K.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="4.0.0" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="5.0.0" />
