Start of Snowmergency service to scrape Sherrif's site for the current snow emergency level.

--- a/SquibbBot13K.Blazor/SquibbBot13K.Blazor/SquibbBot13K.Blazor.csproj
+++ b/SquibbBot13K.Blazor/SquibbBot13K.Blazor/SquibbBot13K.Blazor.csproj
@@ -9,13 +9,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SquibbBot13K.Blazor.Client\SquibbBot13K.Blazor.Client.csproj" />
+    <PackageReference Include="AngleSharp" Version="1.0.7" />
     <PackageReference Include="DSharpPlus" Version="4.4.6" />
     <PackageReference Include="DSharpPlus.SlashCommands" Version="4.4.6" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.1" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageReference Include="System.Net.Security" Version="4.3.2" />
   </ItemGroup>
 
 </Project>
