--- a/SquibbBot13K.Blazor/SquibbBot13K.Blazor/appsettings.json
+++ b/SquibbBot13K.Blazor/SquibbBot13K.Blazor/appsettings.json
@@ -38,5 +38,8 @@
     "Intents": [
 
     ]
+  },
+  "Snowmergency": {
+    "ScanUrl": "https://www.ohiomuskingumsheriff.org/Resources/Snow-Emergency-Levels/"
   }
 }
